--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^2.2.3",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
@@ -24,6 +25,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.15.0",
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
