--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
     "formik": "^2.4.5",
+    "luxon": "^3.4.4",
     "modern-normalize": "^2.0.0",
     "nanoid": "^5.0.6",
     "normalize.css": "^8.0.1",
