--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.15.0",
+    "react-spring": "^9.7.3",
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.0.7",
