--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "format": "prettier --write ./src"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/material": "^5.15.15",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@reduxjs/toolkit": "^2.2.3",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "axios": "^1.6.8",
@@ -33,7 +35,7 @@
     "react-router-dom": "^6.15.0",
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
-    "styled-components": "^6.0.7",
+    "styled-components": "^6.1.8",
     "vite-plugin-svgr": "^3.2.0",
     "yup": "^1.4.0"
   },
