--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
     "formik": "^2.4.5",
+    "i18next": "^23.11.2",
+    "js-cookie": "^3.0.5",
     "luxon": "^3.4.4",
     "modern-normalize": "^2.0.0",
     "nanoid": "^5.0.6",
@@ -30,6 +32,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.0",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.15.0",
